enhancements to homepage. share button style bugs still need to be squashed.

--- a/static/css/en-style.css
+++ b/static/css/en-style.css
@@ -99,26 +99,57 @@ nav {
 	position: absolute;
 	color: #FFFFFF;
 	font-family: Arial, sans-serif;
-	font-size: 72px;
+	font-size: 400%;
 	font-weight: bold;
 	text-transform: uppercase;
 	margin-left:2.5%;
 	bottom:-15px;
 	}
 
+.splash-info-body {
+	position: relative;
+	width: 87%;
+	max-width: 1000px;
+	margin-left: 5%;
+	margin-right: 5%;
+	text-align: left;
+	font-family: "Georgia", serif;
+	margin-bottom: 50px;
+	}
+
 #splash-dek {
-	margin-left:2.5%;
-	margin-right: 2.5%;
 	margin-top: 15px;
 	font-family: Georgia, Serif;
 	}
 
 #splash-intro {
-	margin-left: 2.5%;
-	margin-right: 2.5%;
 	font-family: Georgia, Serif;
-	font-size: 125%;
+	font-size: 115%;
+	margin-bottom: 1.5%;
 	}
+
+.splash-share-buttons {
+	max-width: 250px;
+	height: 45px;
+	border-style: dotted none;
+	border-width: 1px;
+	margin-left: 1%;
+	margin-bottom: 1.5%;
+}
+
+.splash-share-buttons ul {
+	display: block;
+	position: inherit;
+	margin: 0;
+	padding-top: 10px;
+	padding-left: -40px;
+	}
+
+.splash-share-buttons li {
+	list-style-type: none;
+	display: inline-table;
+}
+
 
 .section-hed {
 	margin-left: 2.5%;
@@ -268,8 +299,6 @@ table tr {
 table td::before {
 	line-height: 13px;
 	font-weight: bold;
-	width: 35%;
-
 }
 
 
